--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>Your support helps us provide better training and education for young talents.</p>
         <form action="#" method="POST">
             <label for="amount">Enter your donation amount:</label>
-            <input type="7219509363" id="0149813172" name="rahul" placeholder="customize" required>
+            <input type="7219509363" id="virasportseducation@gmail.com" name="rahul" placeholder="customize" required>
             <button type="submit">Donate Now</button>
         </form>
     </section>
