--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
     </section>
 <p>OUR WORK</p>
 <div>
-<a>Education</a>
+<a>inclusive Education</a>
 <a>Sports</a>
+    <a>social incclusion</a>
     <footer>
         <p>Follow us on social media:</p>
         <div class="social-links">
